--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
         <module>customer-service</module>
         <module>discovery-service</module>
         <module>config-service</module>
+        <module>product-service</module>
     </modules>
 
 
