--- a/backend/product-service/pom.xml
+++ b/backend/product-service/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>product-service</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <java.version>17</java.version>
@@ -22,6 +23,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.glassfish</groupId>-->
+<!--            <artifactId>javax.el</artifactId>-->
+<!--            <version>3.0.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
