--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,7 @@
         <module>discovery-service</module>
         <module>config-service</module>
         <module>product-service</module>
+        <module>order-service</module>
     </modules>
 
 
