--- a/.github/workflows/ecommerce-cd.yml
+++ b/.github/workflows/ecommerce-cd.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Build Unit tests with maven
         run: mvn -B test --file pom.xml
 
-      - name: Build teh application
-        run:
+      - name: Build the application
+        run: |
           mvn clean
           mvn -B package --file pom.xml
 
@@ -40,11 +40,11 @@ jobs:
           push: false
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/E-Commerce-Microservice:latest
 
-      - name: Login to Dokcer
+      - name: Login to Docker
         uses: docker/login-action@v1
         with:
-          username: ${{secrets.DOCKER_HUB_USERNAME }}
-          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Push to Docker hub
         uses: docker/build-push-action@v2
