--- a/.github/workflows/ecommerce-cd.yml
+++ b/.github/workflows/ecommerce-cd.yml
@@ -10,8 +10,8 @@ on:
       - main
 
 jobs:
-  build-deploy:
-    name: Build and deploy ecommerce microservice
+  build-and-deploy:
+    name: Build and deploy ecommerce microservices
     runs-on: ubuntu-latest
 
     steps:
@@ -24,35 +24,39 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: Build Unit tests with maven
-        run: mvn -B test --file pom.xml
-
-      - name: Build the application
+      - name: Build all services with Maven
         run: |
-          mvn clean
-          mvn -B package --file pom.xml
+          mvn clean package --file pom.xml
 
-      - name: Build docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          dockerfile: Dockerfile
-          push: false
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/e-commerce-microservice:latest
+      - name: Build and push config-service Docker image
+        run: |
+          cd backend/config-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/config-service:latest .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/config-service:latest
 
-      - name: Login to Docker
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Build and push discovery-service Docker image
+        run: |
+          cd ../discovery-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/discovery-service:latest .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/discovery-service:latest
 
-      - name: Push to Docker hub
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          dockerfile: Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/e-commerce-microservice:latest
+      - name: Build and push customer-service Docker image
+        run: |
+          cd ../customer-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/customer-service:latest .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/customer-service:latest
+
+      - name: Build and push product-service Docker image
+        run: |
+          cd ../product-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/product-service:latest .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/product-service:latest
+
+      - name: Build and push order-service Docker image
+        run: |
+          cd ../order-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/order-service:latest .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/order-service:latest
 
   qodana:
     runs-on: ubuntu-latest
