--- a/backend/product-service/Dockerfile
+++ b/backend/product-service/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17
 WORKDIR /app
 
 # Copy the JAR file into the container and rename it
-COPY target/product-service-0.0.1-SNAPSHOT.jar /app/product-service.jar
+COPY target/product-service-*.jar /app/product-service.jar
 
 # Specify the command to run your application
 CMD ["java", "-jar", "product-service.jar"]
