fixed order dockerfile config awareness.

--- a/backend/order-service/Dockerfile
+++ b/backend/order-service/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17
 WORKDIR /app
 
 # Copy the JAR file into the container and rename it
-COPY target/order-service-0.0.1-SNAPSHOT.jar /app/order-service.jar
+COPY target/order-service-*.jar /app/order-service.jar
 
 # Specify the command to run your application
 CMD ["java", "-jar", "order-service.jar"]
