--- a/backend/customer-service/pom.xml
+++ b/backend/customer-service/pom.xml
@@ -118,6 +118,10 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${mockito.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
