--- a/backend/config-service/src/main/resources/configurations/order-service.yml
+++ b/backend/config-service/src/main/resources/configurations/order-service.yml
@@ -10,6 +10,15 @@ spring:
       ddl-auto: update
     show-sql: true
 
+    #kafka configuration
+    kafka:
+      producer:
+        bootstrap-servers: localhost:9092
+        key-serializer: org.apache.kafka.common.serialization.StringSerializer
+        value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+        properties:
+          spring.json.type.mapping: orderConfirmation:code.with.vanilson.kafka.OrderConfirmation
+
     # Flyway Migration Configuration
 
     flyway:
