--- a/backend/config-service/src/main/resources/configurations/payment-service.yml
+++ b/backend/config-service/src/main/resources/configurations/payment-service.yml
@@ -18,7 +18,7 @@ kafka:
     key-serializer: org.apache.kafka.common.serialization.StringSerializer
     value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     properties:
-      spring.json.type.mapping: paymentConfirmation:code.with.vanilson.notification.PaymentNotificationRequest
+      spring.json.type.mapping: paymentConfirmation:code.with.vanilson.paymentservice.notification.PaymentNotificationRequest
 
 application:
   config:
