--- a/.github/workflows/ecommerce-cd.yml
+++ b/.github/workflows/ecommerce-cd.yml
@@ -66,6 +66,27 @@ jobs:
           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/order-service:today .
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/order-service:today
 
+      - name: Build and push payment-service Docker image
+        run: |
+          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+          cd backend/payment-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/payment-service:today .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/payment-service:today
+
+      - name: Build and push gateway-api-service Docker image
+        run: |
+          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+          cd backend/gateway-api-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/gateway-api-service:today .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/gateway-api-service:today
+
+      - name: Build and push notification-service Docker image
+        run: |
+          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+          cd backend/notification-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/notification-service:today .
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/notification-service:today
+
   qodana:
     runs-on: ubuntu-latest
     permissions:
