--- a/backend/discovery-service/Dockerfile
+++ b/backend/discovery-service/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17
 WORKDIR /app
 
 # Copy the JAR file into the container and rename it
-COPY target/discovery-service-0.0.1-SNAPSHOT.jar /app/discovery-service.jar
+COPY target/discovery-service-*.jar /app/discovery-service.jar
 
 # Specify the command to run your application
-CMD ["java", "-jar", "discovery-service.jar"]
+ENTRYPOINT ["java", "-jar", "discovery-service.jar"]
