--- a/backend/discovery-service/pom.xml
+++ b/backend/discovery-service/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <start-class>code.with.vanilson.discoveryservice.DiscoveryApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
@@ -37,12 +38,22 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>code.with.vanilson.discoveryservice.DiscoveryApplication</mainClass>
+                    <layout>JAR</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
