--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>./pom.xml</relativePath> <!-- Adjust the relative path as needed --><!-- lookup parent from repository -->
     </parent>
     <groupId>code.with.vanilson</groupId>
     <artifactId>e-commerce-microservice</artifactId>
