--- a/backend/customer-service/pom.xml
+++ b/backend/customer-service/pom.xml
@@ -17,6 +17,7 @@
         <spring-cloud.version>2023.0.1</spring-cloud.version>
         <mockito.version>5.12.0</mockito.version>
         <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
+        <start-class>code.with.vanilson.customerservice.CustomerApplication</start-class>
     </properties>
 
     <dependencies>
@@ -32,7 +33,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -57,8 +61,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -140,6 +143,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                    <mainClass>code.with.vanilson.customerservice.CustomerApplication</mainClass>
+                    <layout>JAR</layout>
+                </configuration>
+
             </plugin>
         </plugins>
     </build>
