--- a/backend/gateway-api-service/pom.xml
+++ b/backend/gateway-api-service/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <start-class>code.with.vanilson.gatewayservice.GatewayServiceApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
